[gd_scene load_steps=5 format=3 uid="uid://4xgl4drja75q"]

[ext_resource type="Script" path="res://common/menu.gd" id="1_7s8hv"]
[ext_resource type="PackedScene" uid="uid://ff3oqsj7dv02" path="res://ui/custom_label.tscn" id="2_0emkm"]
[ext_resource type="PackedScene" uid="uid://7vdx2q26wpr2" path="res://ui/custom_button.tscn" id="2_ov1kc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3p651"]
bg_color = Color(0.3, 0.3, 0.3, 0.74902)

[node name="Menu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3p651")
script = ExtResource("1_7s8hv")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(2.08165e-12, 300)
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 2.08165e-12)
layout_mode = 2

[node name="TitleLabel" parent="CenterContainer/VBoxContainer/TitleContainer" instance=ExtResource("2_0emkm")]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Godot Temple"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer/TitleContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="StartButton" parent="CenterContainer/VBoxContainer/ButtonsContainer" instance=ExtResource("2_ov1kc")]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="ResumeButton" parent="CenterContainer/VBoxContainer/ButtonsContainer" instance=ExtResource("2_ov1kc")]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Resume"

[node name="RestartButton" parent="CenterContainer/VBoxContainer/ButtonsContainer" instance=ExtResource("2_ov1kc")]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Restart"

[node name="SettingsButton" parent="CenterContainer/VBoxContainer/ButtonsContainer" instance=ExtResource("2_ov1kc")]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="QuitButton" parent="CenterContainer/VBoxContainer/ButtonsContainer" instance=ExtResource("2_ov1kc")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="SettingsContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2

[node name="BackButton" parent="CenterContainer/VBoxContainer/SettingsContainer/HBoxContainer" instance=ExtResource("2_ov1kc")]
unique_name_in_owner = true
layout_mode = 2
text = " < "

[node name="CustomLabel" parent="CenterContainer/VBoxContainer/SettingsContainer/HBoxContainer" instance=ExtResource("2_0emkm")]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Settings"

[node name="MouseSensitivity" type="HBoxContainer" parent="CenterContainer/VBoxContainer/SettingsContainer"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="Label" parent="CenterContainer/VBoxContainer/SettingsContainer/MouseSensitivity" instance=ExtResource("2_0emkm")]
layout_mode = 2
size_flags_horizontal = 3
text = "Mouse sensitivity"

[node name="MouseSensitivitySlider" type="HSlider" parent="CenterContainer/VBoxContainer/SettingsContainer/MouseSensitivity"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.01
max_value = 1.0
step = 0.001
value = 0.01

[node name="EffectsVolume" type="HBoxContainer" parent="CenterContainer/VBoxContainer/SettingsContainer"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="Label" parent="CenterContainer/VBoxContainer/SettingsContainer/EffectsVolume" instance=ExtResource("2_0emkm")]
layout_mode = 2
size_flags_horizontal = 3
text = "Effects volume"

[node name="EffectsVolumeSlider" type="HSlider" parent="CenterContainer/VBoxContainer/SettingsContainer/EffectsVolume"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.001

[node name="MusicVolume" type="HBoxContainer" parent="CenterContainer/VBoxContainer/SettingsContainer"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="Label" parent="CenterContainer/VBoxContainer/SettingsContainer/MusicVolume" instance=ExtResource("2_0emkm")]
layout_mode = 2
size_flags_horizontal = 3
text = "Music	 volume"

[node name="MusicVolumeSlider" type="HSlider" parent="CenterContainer/VBoxContainer/SettingsContainer/MusicVolume"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.001

[node name="InvertMouse" type="HBoxContainer" parent="CenterContainer/VBoxContainer/SettingsContainer"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="Label" parent="CenterContainer/VBoxContainer/SettingsContainer/InvertMouse" instance=ExtResource("2_0emkm")]
layout_mode = 2
size_flags_horizontal = 3
text = "Invert mouse"

[node name="InvertMouseOptionButton" type="OptionButton" parent="CenterContainer/VBoxContainer/SettingsContainer/InvertMouse"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 2
popup/item_0/text = "Disabled"
popup/item_0/id = 6
popup/item_1/text = "Enabled"
popup/item_1/id = 7

[node name="Vsync" type="HBoxContainer" parent="CenterContainer/VBoxContainer/SettingsContainer"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="Label" parent="CenterContainer/VBoxContainer/SettingsContainer/Vsync" instance=ExtResource("2_0emkm")]
layout_mode = 2
size_flags_horizontal = 3
text = "Vsync"

[node name="VsyncOptionButton" type="OptionButton" parent="CenterContainer/VBoxContainer/SettingsContainer/Vsync"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 4
popup/item_0/text = "Disabled"
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptive"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[node name="PerformancePreset" type="HBoxContainer" parent="CenterContainer/VBoxContainer/SettingsContainer"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="Label" parent="CenterContainer/VBoxContainer/SettingsContainer/PerformancePreset" instance=ExtResource("2_0emkm")]
layout_mode = 2
size_flags_horizontal = 3
text = "Graphics Preset"

[node name="PerformancePresetOptionButton" type="OptionButton" parent="CenterContainer/VBoxContainer/SettingsContainer/PerformancePreset"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 4
popup/item_0/text = "Low"
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2
popup/item_3/text = "Insane"
popup/item_3/id = 3
